--- a/9.html
+++ b/9.html
@@ -68,13 +68,13 @@
         <!--3번째 행 / 본문 1-->
         <tr>
           <th>표준점수</th>
-          <td rowspan="2"></td>
+          <td rowspan="2">&nbsp;</td>
           <td>131</td>
           <td>137</td>
-          <td rowspan="2"></td>
+          <td rowspan="2">&nbsp;</td>
           <td>53</td>
           <td>64</td>
-          <td rowspan="2"></td>
+          <td rowspan="2">&nbsp;</td>
         </tr>
         <!--4번째 행 / 본문 2-->
         <tr>
