--- a/9-1.html
+++ b/9-1.html
@@ -66,6 +66,7 @@
         </tr>
       </thead>
 
+      <!--테이블 바디 / 콘텐츠 내용-->
       <tbody>
         <tr>
           <th>name</th>
@@ -111,6 +112,7 @@
       </tbody>
     </table>
 
+    <!--기사 내용 텍스트 시작-->
     <p>
       손흥민(토트넘)은 여전히 세계 최고의 공격수 중 하나다. 30대에 접어들었지만,
       최고의 20대 선수들과 어깨를 나란히 했다.
@@ -134,6 +136,7 @@
     <br />
     <p>그는 젊은 선수들과 어깨를 나란히 하기 충분한 활약을 펼쳤다.</p>
 
+    <!--참고 관련 이미지-->
     <figure>
       <img src="./src/son.jpg" alt="주먹을 쥐고 있는 손흥민" />
       <figcaption>
@@ -142,6 +145,7 @@
       </figcaption>
     </figure>
 
+    <!--기사 내용 텍스트2 시작-->
     <p>
       토트넘 이적 후 꾸준히 정상급 활약을 선보인 손흥민은 2023~24시즌 잉글랜드
       프리미어리그(EPL) 35경기에 나서 17골 10도움을 기록, 팀 내 득점·도움 모두
@@ -174,6 +178,7 @@
       페드로 포로만이 SCORE90이 뽑은 각 포지션 톱5에 선정됐다.
     </p>
 
+    <!--기자-->
     김희웅 기자
   </body>
 </html>
