--- a/TR-section.html
+++ b/TR-section.html
@@ -175,51 +175,352 @@
         추천 제품의 경우 이 페이지에 있어도, 없어도 상관 없으며
         다른 페이지에서 보이더라도 이상할것이 없기 때문에-->
 
-        <h3>추천 제품</h3>
+        <h2>추천 제품</h2>
         <div>
           <p>당신에게 딱 맞는 추천제품</p>
           <button><a href="#">왼쪽 화살표</a></button>
           <button><a href="#">오른쪽 화살표</a></button>
         </div>
 
+        <article>
+          <h3>추천 제품 리스트</h3>
+          <div>
+            <img src="#" alt="갤럭시 버즈2 이어폰 이미지" />
+            <p>갤럭시 버즈2 프로</p>
+            <p>쿠폰 적용 예산가 <strong>162,000원</strong></p>
+            <p>적립 예정 포인트 <span>177P</span></p>
+            <hr />
+            <a href="#"><span>+</span>비교하기</a>
+            <p>
+              <img src="#" alt="평점 노란 별" /> <strong>4.8</strong> (2432)
+            </p>
+          </div>
+
+          <div>
+            <img src="#" alt="갤럭시 버즈2 이어폰 이미지" />
+            <p>갤럭시 버즈2 프로</p>
+            <p>쿠폰 적용 예산가 <strong>162,000원</strong></p>
+            <p>적립 예정 포인트 <span>177P</span></p>
+            <hr />
+            <a href="#"><span>+</span>비교하기</a>
+            <p>
+              <img src="#" alt="평점 노란 별" /> <strong>4.8</strong> (2432)
+            </p>
+          </div>
+
+          <div>
+            <img src="#" alt="갤럭시 버즈2 이어폰 이미지" />
+            <p>갤럭시 버즈2 프로</p>
+            <p>쿠폰 적용 예산가 <strong>162,000원</strong></p>
+            <p>적립 예정 포인트 <span>177P</span></p>
+            <hr />
+            <a href="#"><span>+</span>비교하기</a>
+            <p>
+              <img src="#" alt="평점 노란 별" /> <strong>4.8</strong> (2432)
+            </p>
+          </div>
+      </article>
+
+      <!--카테별 상품 소개-->
+      <!--01 모바일 & PC-->
+      <section>
+        <h2>모바일 & PC</h2>
+
+        <!--<a>에서 <button>으로 변경한 이유 : 
+          페이지를 둘러보니 해당 li를 클릭할때 어떤 페이지로 이동하는 것이 아닌
+          현재 페이지 내에서 해당 영역부분만 이동하기 때문에-->
+        <ul>
+          <li><button>Galaxy S24 Series</button></li>
+          <li><button>Galaxy Tab S9 Series</button></li>
+          <li><button>Galaxy Book4 Series</button></li>
+          <li><button>갤럭시 동시구매</button></li>
+          <li><button>Galaxy Watch6 Series</button></li>
+          <li><button>갤럭시 캠퍼스</button></li>
+        </ul>
+
+        <!--이미지 영역-->
         <div>
-          <div>
-            <img src="#" alt="갤럭시 버즈2 이어폰 이미지" />
-            <p>갤럭시 버즈2 프로</p>
-            <p>쿠폰 적용 예산가 <strong>162,000원</strong></p>
-            <p>적립 예정 포인트 <span>177P</span></p>
-            <hr />
-            <a href="#"><span>+</span>비교하기</a>
-            <p>
-              <img src="#" alt="평점 노란 별" /> <strong>4.8</strong> (2432)
-            </p>
-          </div>
+          <img src="#" alt="Galaxy AI is here 라는 텍스트 아래로 화면이 켜진 갤럭시 휴대폰 화면이 있고 휘어진 형태의 선이 아래의 갤럭시 S24 그레이 후면과 펜이 있는 곳으로 이어진 그림">
+        </div>
+
+        <div>
+          <p class="section-sub-title">Galaxy AI로 바꿔보상</p>
+          <p class="section-sub-comment">6월 특별 중고 보상가 + 최대 5만원 추가 보상<br>
+          기간 한정 갤럭시 S24 울트라 최대 13% 즉시할인</p>
+          <button><a href="#">구매 혜택 보기</a></button>
+        </div>
+      </section>
+
+      <!--02 TV & 오디오-->
+      <section>
+        <h2>TV & 오디오</h2>
+        <ul>
+          <li><button>Neo QLED 8K</button></li>
+          <li><button>삼성 OLED</button></li>
+          <li><button>The Frame</button></li>
+          <li><button>오디세이 | 뷰피니티 모니터</button></li>
+          <li><button>Q시리즈 사운드바</button></li>
+        </ul>
+
+        <!--이미지 영역-->
+        <div>
+          <img src="#" alt="나무로 된 벽에 TV가 걸려 있으며 TV는 강가 경치를 보여주고 있다">
+        </div>
+
+        <div>
+          <p class="section-sub-title">Neo QLED 8K</p>
+          <p class="section-sub-comment">2세대 AI 8K 프로세서가 선사하는 궁극의 시청 경험을 <br>
+          삼성 AI TV로 바꿔보상 혜택과 함께 만나보세요</p>
+          <button><a href="#">구매 혜택 보기</a></button>
+        </div>
+      </section>
+
+      <!--03 가전-->
+      <section>
+        <h2>가전</h2>
+        <ul>
+          <li><button>BESPOKE 무풍갤러리</button></li>
+          <li><button>BESPOKE AI 콤보</button></li>
+          <li><button>BESPOKE AI 하이브리드</button></li>
+          <li><button>BESPOKE 청소기</button></li>
+          <li><button>BESPOKE 주방가전</button></li>
+          <li><button>BESPOKE 공기청정기</button></li>
+        </ul>
+
+        <!--이미지 영역-->
+        <div>
+          <img src="#" alt="왼쪽엔 주방과 테이블, 의자가 있으며 가운데 스탠드형 삼성 무풍에어컨이 서 있다">
+        </div>
+
+        <div>
+          <p class="section-sub-title">천만이 선택한 무풍에어컨</p>
+          <p class="section-sub-comment">최대 4만 쿠폰 할인 및 무상수리서비스 혜택으로 <br>
+          시원한 여름을 준비하세요</p>
+          <button><a href="#">구매 혜택 보기</a></button>
+        </div>
+      </section>
+
+      <!--aside를 선택한 이유 : 챌린지와 같은 광고 느낌으로 페이지의 보조적인 역할로 느껴져서-->
+      <aside>
+        <div>
+          <p>스토리</p>
+          <p>#DoWhatYouCant</p>
+        </div>
+
+        <div>
+          <img src="#" alt="환호하는 사람들이 있고 무대위에서 땅을 손으로 짚으며 윈드밀을 추는 여성의 실루엣과 겹친 갤럭시 플립이 있습니다.
+          플립의 화면은 여성의 옷을 발레복으로 보여주고 있으며 오른쪽에 남성이 함께 즐기며 응원하고 있습니다.
+          하단에는 올림픽로고와 삼성로고, 아지토스 로고가 있으며 그 아래에는 Worldwide Olympic and paralympic partner 이라 적혀 있습니다.">
+        </div>
+
+        <div>
+          <ol>
+            <li>#삼성 갤럭시와 함께 Open always wins <a href="#">더 알아보기</a></li>
+            <li>#더 프레임으로 더 기분 좋은 우리 집 만들기 <a href="#">더 알아보기</a></li>
+            <li>#갤럭시 Z 플립5 메종 마르지엘라 에디션 <a href="#">더 알아보기</a></li>
+            <li>#뛰어난 디자인과 기술로 모두를 사로잡은 삼성의 수상 제품을 만나보세요 <a href="#">더 알아보기</a></li>
+          </ol>
+        </div>
+      </aside>
+
+    </main>
+
+    <!--footer 시작-->
+    <footer>
+      <!--페이지 링크-->
+      <nav>
+        <h2>페이지 링크</h2>
+        <ul>
+          <!--1번째 열-->
+          <li>
+            <h3>제품</h3>
+            <ul>
+              <li>갤럭시와</li>
+              <li>스마트폰 </li>
+              <li>태블릿</li>
+              <li>워치</li>
+              <li>버즈</li>
+              <li>갤럭시북</li>
+              <li>모니터</li>
+              <li>프린터</li>
+              <li>메모리/스토리지</li>
+              <li>TV</li>
+              <li>Lifestyle TV</li>
+              <li>사운드바</li>
+              <li>하만</li>
+              <li>냉장고</li>
+              <li>김치냉장고</li>
+              <li>식기세척기</li>
+            </ul>
+          </li>
+
+          <!--2번째 열-->
+          <li>
+            <h3>&nbsp;</h3>
+            <ul>
+              <li><a href="#">인덕션</a></li>
+              <li><a href="#">오븐/큐커</a></li>
+              <li><a href="#">전자레인지</a></li>
+              <li><a href="#">정수기</a></li>
+              <li><a href="#">세탁기</a></li>
+              <li><a href="#">건조기</a></li>
+              <li><a href="#">에어드레서</a></li>
+              <li><a href="#">슈드레서</a></li>
+              <li><a href="#">에어컨</a></li>
+              <li><a href="#">공기청정기</a></li>
+              <li><a href="#">청소기</a></li>
+              <li><a href="#">스마트싱스</a></li>
+              <li><a href="#">액세서리&소모품</a></li>
+              <li><a href="#">데이코 <span>↗</span></a></li>
+            </ul>
+          </li>
+
+          <!--3번째 열-->
+          <li>
+            <h3>이벤트</h3>
+            <ul>
+              <li><a href="#">삼성닷컴추천 모두보기</a></li>
+              <li><a href="#">삼성닷컴 단독</a></li>
+              <li><a href="#">아울렛</a></li>
+              <li><a href="#">갤럭시 캠퍼스</a></li>
+              <li><a href="#">삼닷 Live</a></li>
+              <li><a href="#">비스포크 스튜디오</a></li>
+              <li><a href="#">스토어 진열 할인 제품</a></li>
+              <li><a href="#">닷컴 회원 혜택</a></li>
+              <li><a href="#">이벤트/체험존</a></li>
+              <li><a href="#">e식품관</a></li>
+              <li><a href="#">펫 게어 스토어</a></li>
+              <li><a href="#">홈클래스</a></li>
+              <li><a href="#">스토리</a></li>
+            </ul>
+          </li>
+
+          <!--4번째 열-->
+          <li>
+            <h3>고객서비스</h3>
+            <ul>
+              <li><a href="#">매뉴얼 & 다운로드</a></li>
+              <li><a href="#">삼성닷컴 FAQ</a></li>
+              <li><a href="#">매장 찾기</a></li>
+              <li><a href="#">서비스센터 찾기</a></li>
+              <li><a href="#">삼성케어플러스 모바일/PC</a></li>
+              <li><a href="#">삼성케어플러스 가전/TV</a></li>
+              <li><a href="#">시간 맞춤 설치 서비스센터</a></li>
+              <li><a href="#">삼성스토어</a></li>
+              <li><a href="#">삼성전자 멤버십</a></li>
+              <li><a href="#">MD 비즈니스 협력제안</a></li>
+              <li><a href="#">비즈니스 협력제안 <span>↗</span></a></li>
+              <li><a href="#">삼성멤버스 커뮤니티 <span>↗</span></a></li>
+              <li><a href="#">E-카달로그 <span>↗</span></a></li>
+              <li><a href="#">삼성닷컴 경험조사 <span>↗</span></a></li>
+            </ul>
+          </li>
+
+          <!--5번째 열-->
+          <li>
+            <h3>지속 가능 경영</h3>
+            <ul>
+            <li><a href="#">환경</a></li>
+            <li><a href="#">보안 & 개인정보 보호</a></li>
+            <li><a href="#">접근성</a></li>
+            <li><a href="#">다양성 · 형평성 · 포용성</a></li>
+            <li><a href="#">사회공헌 <span>↗</span></a></li>
+            <li><a href="#">Corporate Sustainabillity <span>↗</span></a></li>
+          </ul>
+
+            <h3>윤리&준법경영</h3>
+            <ul>
+              <li><a href="#">경영원칙 <span>↗</span></a></li>
+              <li><a href="#">부정제보 <span>↗</span></a></li>
+              <li><a href="#">법위반제보 <span>↗</span></a></li>
+            </ul>
+          </li>
+
+          <!--6번째 열-->
+          <li>
+            <h3>회사소개</h3>
+            <ul>
+              <li><a href="#">기업정보</a></li>
+              <li><a href="#">사업정보</a></li>
+              <li><a href="#">브랜드 아이덴티티</a></li>
+              <li><a href="#">채용</a></li>
+              <li><a href="#">투자자 정보</a></li>
+              <li><a href="#">뉴스룸 <span>↗</span></a></li>
+              <li><a href="#">윤리</a></li>
+              <li><a href="#">디자인 삼성 <span>↗</span></a></li>
+              <li><a href="#">배당조회 <span>↗</span></a></li>
+              <li><a href="#">공지사항</a></li>
+            </ul>
+
+            <h3>부가정보</h3>
+            <ul>
+              <li><a href="#">협력회사 사이버 신문고 <span>↗</span></a></li>
+              <li><a href="#">페카트리지 회수신청</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+
+      <!--페이지 정보-->
+      <address>
+        <dl>
+          <dt>삼성전자 주식회사 대표이사 : 한종희</dt>
+          <dt>사업자등록번호 : 124-81-00998 <a href="#"><button>사업자 정보 확인</button></a></dt>
+          <dt>통신판매업 신고 : 2000-경기수원-0515</dt>
+
+          <dt>사업장주소 : 경기도 수원시 영통구 삼성로 129(매탄동)</dt>
+          <dt>호스팅서비스사업자 : 한국아이비엠(주)</dt>
+          <dt>대표번호 : 02-2255-0114</dt>
+          <dt>제품/서비스/멤버십 : 1588-3366(통화요금:발신자부담)</dt>
+          <dt>구매문의 : 1588-6084</dt>
+          <dt>e식품관 문의 : 1811-9228</dt>
+
+          <dd>본 사이트에서 판매되는 상품 중에는 등록된 개별 판매자가 판매하는 상품이 포함되어 있습니다.</dd>
+          <dd>개별 판매자 판매 상품의 경우 삼성전자(주)는 통신판매중개업자로서 통신판매의 당사자가 아니므로, 개별 판매자가 등록한 상품, 거래정보 및 거래 등에 대해 책임을 지지 않습니다. <a href="#"><button>소비자분쟁해결기준</button></a></dd>
+          <dd>본 사이트의 컨텐츠는 저작권법의 보호를 받는 바 무단 전재, 복사, 배포 등을 금합니다.</dd>
+        </dl>
+      </address>
+
+        <div>
+          <p>Copyright ⓒ 1995-2024 Samsung. All Rights Reserved.</p>
 
           <div>
-            <img src="#" alt="갤럭시 버즈2 이어폰 이미지" />
-            <p>갤럭시 버즈2 프로</p>
-            <p>쿠폰 적용 예산가 <strong>162,000원</strong></p>
-            <p>적립 예정 포인트 <span>177P</span></p>
-            <hr />
-            <a href="#"><span>+</span>비교하기</a>
-            <p>
-              <img src="#" alt="평점 노란 별" /> <strong>4.8</strong> (2432)
-            </p>
-          </div>
-
-          <div>
-            <img src="#" alt="갤럭시 버즈2 이어폰 이미지" />
-            <p>갤럭시 버즈2 프로</p>
-            <p>쿠폰 적용 예산가 <strong>162,000원</strong></p>
-            <p>적립 예정 포인트 <span>177P</span></p>
-            <hr />
-            <a href="#"><span>+</span>비교하기</a>
-            <p>
-              <img src="#" alt="평점 노란 별" /> <strong>4.8</strong> (2432)
-            </p>
+            <img src="#" alt="디지털고객경험자수 아이콘">
+            <img src="#" alt="디지털고객경험자수 아이콘">
+            <img src="#" alt="디지털고객경험자수 아이콘">
+            <img src="#" alt="디지털고객경험자수 아이콘">
           </div>
         </div>
-      </article>
-    </main>
+
+        <div>
+          <ul>
+            <li><a href="#">한국/한국어</a></li>
+            <li><a href="#">이메일 무단 수집거부</a></li>
+            <li><a href="#">아이디어 정책</a></li>
+            <li><a href="#">사이트맵</a></li>
+            <li>
+              <select name="이용약관" id="">
+                <option value="이용약관"><a href="#">이용약관</a></option>
+              </select>
+            </li>
+            <li>
+              <select name="개인정보처리방침" id="">
+                <option value="개인정보처리방침"><a href="#">개인정보처리방침</a></option>
+              </select>
+            </li>
+          </ul>
+        </div>
+
+        <div>
+        <p>삼성전자의 다양한 소식을 만나보세요!
+          <span><a href="#"><img src="#" alt="페이스북 아이콘"></a></span>
+          <span><a href="#"><img src="#" alt="유튜브 아이콘"></a></span>
+          <span><a href="#"><img src="#" alt="인스타그램 아이콘"></a></span>
+          <span><a href="#"><img src="#" alt="카카오톡 아이콘"></a></span>
+          <span><a href="#"><img src="#" alt="X 아이콘"></a></span>
+          <span><a href="#"><img src="#" alt="공유링크 아이콘"></a></span>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
