--- a/TR-section.html
+++ b/TR-section.html
@@ -229,14 +229,21 @@
         <!--<a>에서 <button>으로 변경한 이유 : 
           페이지를 둘러보니 해당 li를 클릭할때 어떤 페이지로 이동하는 것이 아닌
           현재 페이지 내에서 해당 영역부분만 이동하기 때문에-->
-        <ul>
+        <!-- <ul>
           <li><button>Galaxy S24 Series</button></li>
           <li><button>Galaxy Tab S9 Series</button></li>
           <li><button>Galaxy Book4 Series</button></li>
           <li><button>갤럭시 동시구매</button></li>
           <li><button>Galaxy Watch6 Series</button></li>
           <li><button>갤럭시 캠퍼스</button></li>
-        </ul>
+        </ul> -->
+
+        <h3><button>Galaxy S24 Series</button></h3>
+        <h3><button>Galaxy Tab S9 Series</button></h3>
+        <h3><button>Galaxy Book4 Series</button></h3>
+        <h3><button>갤럭시 동시구매</button></h3>
+        <h3><button>Galaxy Watch6 Series</button></h3>
+        <h3><button>갤럭시 캠퍼스</button></h3>
 
         <!--이미지 영역-->
         <div>
@@ -254,13 +261,18 @@
       <!--02 TV & 오디오-->
       <section>
         <h2>TV & 오디오</h2>
-        <ul>
+        <!-- <ul>
           <li><button>Neo QLED 8K</button></li>
           <li><button>삼성 OLED</button></li>
           <li><button>The Frame</button></li>
           <li><button>오디세이 | 뷰피니티 모니터</button></li>
           <li><button>Q시리즈 사운드바</button></li>
-        </ul>
+        </ul> -->
+          <h3><button>Neo QLED 8K</button></h3>
+          <h3><button>삼성 OLED</button></h3>
+          <h3><button>The Frame</button></h3>
+          <h3><button>오디세이 | 뷰피니티 모니터</button></h3>
+          <h3><button>Q시리즈 사운드바</button></h3>
 
         <!--이미지 영역-->
         <div>
@@ -335,22 +347,22 @@
           <li>
             <h3>제품</h3>
             <ul>
-              <li>갤럭시와</li>
-              <li>스마트폰 </li>
-              <li>태블릿</li>
-              <li>워치</li>
-              <li>버즈</li>
-              <li>갤럭시북</li>
-              <li>모니터</li>
-              <li>프린터</li>
-              <li>메모리/스토리지</li>
-              <li>TV</li>
-              <li>Lifestyle TV</li>
-              <li>사운드바</li>
-              <li>하만</li>
-              <li>냉장고</li>
-              <li>김치냉장고</li>
-              <li>식기세척기</li>
+              <li><a href="#">갤럭시와</a></li>
+              <li><a href="#">스마트폰</a></li>
+              <li><a href="#">태블릿</a></li>
+              <li><a href="#">워치</a></li>
+              <li><a href="#">버즈</li>
+              <li><a href="#">갤럭시북</a></li>
+              <li><a href="#">모니터</a></li>
+              <li><a href="#">프린터</a></li>
+              <li><a href="#">메모리/스토리지</a></li>
+              <li><a href="#">TV</a></li>
+              <li><a href="#">Lifestyle TV</a></li>
+              <li><a href="#">사운드바</a></li>
+              <li><a href="#">하만</a></li>
+              <li><a href="#">냉장고</a></li>
+              <li><a href="#">김치냉장고</a></li>
+              <li><a href="#">식기세척기</a></li>
             </ul>
           </li>
 
@@ -463,6 +475,7 @@
 
       <!--페이지 정보-->
       <address>
+        <h2>삼성전자 사업자 정보</h2>
         <dl>
           <dt>삼성전자 주식회사 대표이사 : 한종희</dt>
           <dt>사업자등록번호 : 124-81-00998 <a href="#"><button>사업자 정보 확인</button></a></dt>
@@ -498,17 +511,15 @@
             <li><a href="#">이메일 무단 수집거부</a></li>
             <li><a href="#">아이디어 정책</a></li>
             <li><a href="#">사이트맵</a></li>
-            <li>
-              <select name="이용약관" id="">
-                <option value="이용약관"><a href="#">이용약관</a></option>
-              </select>
-            </li>
-            <li>
-              <select name="개인정보처리방침" id="">
-                <option value="개인정보처리방침"><a href="#">개인정보처리방침</a></option>
-              </select>
-            </li>
           </ul>
+            
+          <select name="이용약관" id="">
+            <option value="이용약관"><a href="#">이용약관</a></option>
+          </select>
+          <select name="개인정보처리방침" id="">
+            <option value="개인정보처리방침"><a href="#">개인정보처리방침</a></option>
+          </select>
+
         </div>
 
         <div>
