--- a/19.html
+++ b/19.html
@@ -9,8 +9,14 @@
     <select name="" id="">
       <optgroup label="직업 선택하기">
         <option value="">옵션 선택하기</option>
-        <option value="">프론트엔드 개발자</option>
-        <option value="">백엔드 개발자</option>
+        <option value="FE">프론트엔드 개발자</option>
+        <option value="BE">백엔드 개발자</option>
+      </optgroup>
+      <optgroup label="두번째 직업 선택하기">
+        <option value="">두번째 선택하기</option>
+        <option value="DE">디자이너</option>
+        <option value="FE">프론트엔드 개발자</option>
+        <option value="BE">백엔드 개발자</option>
       </optgroup>
     </select>
   </body>
