--- a/css/029-pseudo.html
+++ b/css/029-pseudo.html
@@ -12,6 +12,10 @@
         text-decoration: none;
       }
 
+      a:link {
+        color: chocolate;
+      }
+
       a:visited {
         color: red;
       }
