--- a/study/apple-clone.html
+++ b/study/apple-clone.html
@@ -40,5 +40,9 @@
         </ul>
       </nav>
     </header>
+
+    <main id="main-content">
+      <section id=""></section>
+    </main>
   </body>
 </html>
