css : 다음 웹페이지 섹션 나누기 그리드 연습_최종

--- a/study/daum-grid.html
+++ b/study/daum-grid.html
@@ -10,57 +10,58 @@
   </head>
   <body>
     <header></header>
-    <!-- <main>
-      <article class="ad"></article>
-      <aside class="login"></aside>
-      <section class="news"></section>
-      <aside class="wether"></aside>
-      <aside class="ad2">ad2</aside>
-      <article class="news-sub"></article>
-      <section class="shopping"></section>
-      <section class="enter-news"></section>
-      <aside class="ad3"></aside>
-      <aside class="stock"></aside>
-      <section class="sports-news"></section>
-      <aside class="short-video"></aside>
-      <section class="cafe-story"></section>
-      <aside class="shopping-hotdeal"></aside>
-      <section class="hot-topic"></section>
-      <aside class="ad4"></aside>
-      <aside class="game"></aside>
-      <aside class="donation"></aside>
-      <aside class="enter-rank"></aside>
-      <aside class="today-photo"></aside>
-      <section class="shoppin-trend"></section>
-    </main> -->
     <main>
+      <article id="left" class="ad">광고</article>
+      <section id="left" class="news">뉴스</section>
+      <article id="left" class="news-sub">주요소식</article>
+      <section id="left" class="enter-news">연예 뉴스</section>
+      <aside id="left" class="ad3">광고 2</aside>
+      <section id="left" class="sports-news">스포츠 뉴스</section>
+      <section id="left" class="cafe-story">카페 스토리</section>
+      <section id="left" class="hot-topic">관심 키워드</section>
+      <aside id="left" class="shopping-hotdeal">쇼핑</aside>
+
+      <aside id="right" class="login">로그인</aside>
+      <aside id="right" class="weather">날씨</aside>
+      <aside id="right" class="ad2">광고3</aside>
+      <section id="right" class="shopping">쇼핑</section>
+      <aside id="right" class="stock">증권</aside>
+      <aside id="right" class="short-video">오늘의 숏</aside>
+      <aside id="right" class="hot-deal">핫 딜</aside>
+      <aside id="right" class="ad4">광고 4</aside>
+      <aside id="right" class="game">추천 게임</aside>
+      <aside id="right" class="donation">기부</aside>
+      <aside id="right" class="enter-rank">엔터 랭킹</aside>
+      <aside id="right" class="today-photo">오늘의 포토</aside>
+    </main>
+    <!-- <main>
       <section class="left-content">
-        <article class="ad"></article>
-        <section class="news"></section>
-        <article class="news-sub"></article>
-        <section class="enter-news"></section>
-        <aside class="ad3"></aside>
-        <section class="sports-news"></section>
-        <section class="cafe-story"></section>
-        <section class="hot-topic"></section>
-        <aside class="shopping-hotdeal"></aside>
+        <article id="left" class="ad"></article>
+        <section id="left" class="news"></section>
+        <article id="left" class="news-sub"></article>
+        <section id="left" class="enter-news"></section>
+        <aside id="left" class="ad3"></aside>
+        <section id="left" class="sports-news"></section>
+        <section id="left" class="cafe-story"></section>
+        <section id="left" class="hot-topic"></section>
+        <aside id="left" class="shopping-hotdeal"></aside>
       </section>
 
       <section class="right-content">
-        <aside class="login"></aside>
-        <aside class="wether"></aside>
-        <aside class="ad2">ad2</aside>
-        <section class="shopping"></section>
-        <aside class="stock"></aside>
-        <aside class="short-video"></aside>
-        <aside class="ad4"></aside>
-        <aside class="game"></aside>
-        <aside class="donation"></aside>
-        <aside class="enter-rank"></aside>
-        <aside class="today-photo"></aside>
-        <section class="shoppin-trend"></section>
+        <aside id="right" class="login"></aside>
+        <aside id="right" class="wether"></aside>
+        <aside id="right" class="ad2">ad2</aside>
+        <section id="right" class="shopping"></section>
+        <aside id="right" class="stock"></aside>
+        <aside id="right" class="short-video"></aside>
+        <aside id="right" class="ad4"></aside>
+        <aside id="right" class="game"></aside>
+        <aside id="right" class="donation"></aside>
+        <aside id="right" class="enter-rank"></aside>
+        <aside id="right" class="today-photo"></aside>
+        <section id="right" class="shoppin-trend"></section>
       </section>
-    </main>
+    </main> -->
     <footer></footer>
   </body>
 </html>
