📝 bootstrap 기본 템플릿

--- a/bootstrap/001-bootctrap.html
+++ b/bootstrap/001-bootctrap.html
@@ -20,6 +20,7 @@
     <!--css-->
   </head>
   <body>
+    bootstrap 스타일 적용(기본과 크게 다르지 않다)
     <h1>hello world</h1>
     <h2>hello world</h2>
     <h3>hello world</h3>
