--- a/bootstrap/002-bootstraps.html
+++ b/bootstrap/002-bootstraps.html
@@ -25,6 +25,7 @@
     </style>
   </head>
   <body>
+    bootstrap 그리드 합치는 방법
     <div class="container">
       <div class="row">
         <!-- md= 미디엄 사이즈 -->
