--- a/bootstrap/003-.html
+++ b/bootstrap/003-.html
@@ -25,6 +25,7 @@
     </style>
   </head>
   <body>
+    bootstrap 그리드 나누기 (반응형)
     <div class="container">
       <div class="row">
         <div class="b col-md-3 col-sm-12">옷</div>
