--- a/bootstrap/005-modal.html
+++ b/bootstrap/005-modal.html
@@ -35,6 +35,7 @@
         />
       </head>
       <body>
+        bootstrap 모달 디자인
         <!-- Button trigger modal -->
         <button
           type="button"
