--- a/bootstrap/006-webcopy.html
+++ b/bootstrap/006-webcopy.html
@@ -26,6 +26,7 @@
     </style>
   </head>
   <body>
+    bootstrap 웹에서 코드로 바로 복사해오기
     <!-- 부트스트랩에서 복사해온 헤더 -->
     <header data-bs-theme="dark">
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
