--- a/bootstrap/007-toastui.html
+++ b/bootstrap/007-toastui.html
@@ -10,6 +10,7 @@
     <script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
   </head>
   <body>
+    bootstrap 위지위그 한국에서 잘 만든 토스트 ui
     <!-- 위지위그 코딩 -->
     <!-- 한국에서 가장 잘 만들었다 : 토스트 ui -->
     <div id="editor"></div>
