--- a/bootstrap/009-sweetalet2.html
+++ b/bootstrap/009-sweetalet2.html
@@ -16,6 +16,7 @@
     />
   </head>
   <body>
+    bootstrap 스윗 알럿
     <button onclick="Swal.fire('Any fool can use a computer')">눌러!</button>
 
     <button
