--- a/tailwind/002-colors.html
+++ b/tailwind/002-colors.html
@@ -6,6 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    tailwind 요소의 컬러와 값
     <!-- 비교해보세요. -->
 
     <!-- text-gray-300 -->
