--- a/tailwind/003-typo.html
+++ b/tailwind/003-typo.html
@@ -6,6 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    tailwind 요소의 폰트(텍스트) 설정
     <!-- 
         https://tailwindcss.com/docs/font-family
             font-sans
