--- a/tailwind/005_arbitrary_value.html
+++ b/tailwind/005_arbitrary_value.html
@@ -6,6 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    tailwind 라이브러리에는 없는 절대적(임의의) 값을 줄때 (?)
     <div class="top-[117px]">
       <!-- ... -->
     </div>
