--- a/tailwind/006-basic-element.html
+++ b/tailwind/006-basic-element.html
@@ -6,6 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    tailwind 패딩, 마진, 텍스트 크기 등 기본 디자인 요소
     <!-- https://tailwindcss.com/docs/margin -->
     <!-- https://tailwindcss.com/docs/padding -->
     <!-- https://tailwindcss.com/docs/font-weight -->
