--- a/tailwind/008-grid.html
+++ b/tailwind/008-grid.html
@@ -6,6 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    tailwind의 grid
     <!-- https://tailwindcss.com/docs/grid-template-columns -->
     <!-- https://tailwindcss.com/docs/grid-column -->
     <!-- https://tailwindcss.com/docs/grid-template-rows -->
