--- a/tailwind/009-ex.html
+++ b/tailwind/009-ex.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    tailwind 실용 예제 (웹페이지에 있는 테일윈드로 만든 디자인)
     <div class="flex font-sans">
       <div class="flex-none w-48 relative">
         <img
