--- a/tailwind/010-transition.html
+++ b/tailwind/010-transition.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    tailwind의 transition 사용
     <!-- https://tailwindcss.com/docs/transition-property -->
     <!-- transition-timing-function -->
     <div class="flex h-64 justify-center items-center">
