--- a/tailwind/011-1-tr-layout.html
+++ b/tailwind/011-1-tr-layout.html
@@ -6,6 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    tailwind를 이용한 이력서 레이아웃 구현해보기 실습
     <h1 class="sr-only">이력서</h1>
 
     <div class="flex gap-32 items-center">
