--- a/tailwind/011-animation.html
+++ b/tailwind/011-animation.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    tailwind의 애니메이션
     <!-- https://tailwindcss.com/docs/animation -->
     <div class="relative rounded-xl overflow-auto p-8">
       <div class="flex items-center justify-center">
