--- a/bootstrap/004-card.html
+++ b/bootstrap/004-card.html
@@ -23,6 +23,7 @@
     </style>
   </head>
   <body>
+    bootstrap 카드형 ui
     <div class="container">
       <div class="row">
         <div class="col-md-3">
