--- a/bootstrap/008-picker.html
+++ b/bootstrap/008-picker.html
@@ -27,6 +27,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta2/dist/js/bootstrap-select.min.js"></script>
   </head>
   <body>
+    bootstrap 피커 라이브러리?
     <select class="selectpicker">
       <option>Mustard</option>
       <option>Ketchup</option>
