--- a/bootstrap/009-daypiker.html
+++ b/bootstrap/009-daypiker.html
@@ -19,6 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
   </head>
   <body>
+    bootstrap 데이피커 라이브러리
     <input type="text" class="form-control" id="datepicker" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
