--- a/tailwind/000-template.html
+++ b/tailwind/000-template.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body></body>
+  <body>
+    tailwind 기본 템플릿
+  </body>
 </html>
