--- a/tailwind/004-shadow.html
+++ b/tailwind/004-shadow.html
@@ -6,6 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    tailwind 쉐도우 주기
     <div class="grid grid-cols-2 gap-6">
       <div class="shadow-sm bg-red-200 rounded-lg">shadow-sm</div>
       <div class="shadow bg-red-200 rounded-lg">shadow</div>
