--- a/tailwind/007-flex.html
+++ b/tailwind/007-flex.html
@@ -6,6 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    tailwind의 flex
     <!-- https://tailwindcss.com/docs/flex -->
     <!-- https://tailwindcss.com/docs/width -->
     <!-- https://tailwindcss.com/docs/gap -->
