✅ update : study-다음 레이아웃 연습 섹션을 2개로 나눠서 다시 코드 정리

--- a/study/daum-grid.html
+++ b/study/daum-grid.html
@@ -11,28 +11,32 @@
   <body>
     <header></header>
     <main>
-      <article id="left" class="ad">광고</article>
-      <section id="left" class="news">뉴스</section>
-      <article id="left" class="news-sub">주요소식</article>
-      <section id="left" class="enter-news">연예 뉴스</section>
-      <aside id="left" class="ad3">광고 2</aside>
-      <section id="left" class="sports-news">스포츠 뉴스</section>
-      <section id="left" class="cafe-story">카페 스토리</section>
-      <section id="left" class="hot-topic">관심 키워드</section>
-      <aside id="left" class="shopping-hotdeal">쇼핑</aside>
+      <div class="left">
+        <div class="ad"><img src="./src/ad.png" alt="광고 이미지" /></div>
+        <div class="news">뉴스</div>
+        <div class="news-sub">주요소식</div>
+        <div class="enter-news">연예 뉴스</div>
+        <div class="ad3">광고 2</div>
+        <div class="sports-news">스포츠 뉴스</div>
+        <div class="cafe-story">카페 스토리</div>
+        <div class="hot-topic">관심 키워드</div>
+        <div class="shopping-hotdeal">쇼핑</div>
+      </div>
 
-      <aside id="right" class="login">로그인</aside>
-      <aside id="right" class="weather">날씨</aside>
-      <aside id="right" class="ad2">광고3</aside>
-      <section id="right" class="shopping">쇼핑</section>
-      <aside id="right" class="stock">증권</aside>
-      <aside id="right" class="short-video">오늘의 숏</aside>
-      <aside id="right" class="hot-deal">핫 딜</aside>
-      <aside id="right" class="ad4">광고 4</aside>
-      <aside id="right" class="game">추천 게임</aside>
-      <aside id="right" class="donation">기부</aside>
-      <aside id="right" class="enter-rank">엔터 랭킹</aside>
-      <aside id="right" class="today-photo">오늘의 포토</aside>
+      <div class="right">
+        <div class="login">로그인</div>
+        <div class="weather">날씨</div>
+        <div class="ad2"></div>
+        <div class="shopping">쇼핑</div>
+        <div class="stock">증권</div>
+        <div class="short-video">오늘의 숏</div>
+        <div class="hot-deal">핫 딜</div>
+        <div class="ad4">광고 4</div>
+        <div class="game">추천 게임</div>
+        <div class="donation">기부</div>
+        <div class="enter-rank">엔터 랭킹</div>
+        <div class="today-photo">오늘의 포토</div>
+      </div>
     </main>
     <!-- <main>
       <section class="left-content">
