✅ update : 다음 웹페이지 그리드 연습 feat 검색 박스 컬러 애니메이션 추가

--- a/study/daum-grid.html
+++ b/study/daum-grid.html
@@ -9,7 +9,12 @@
     <link rel="stylesheet" href="daum-grid.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <h2 class="sr-only">로고 및 검색, 네비게이션</h2>
+      <div class="search-wrap">
+        <div class="search-box"></div>
+      </div>
+    </header>
     <main>
       <div class="left">
         <div class="ad"><img src="./src/ad.png" alt="광고 이미지" /></div>
