✅ jquery 와 js 쿼리 셀렉터의 차이점

--- a/jquery/jquery.html
+++ b/jquery/jquery.html
@@ -38,5 +38,17 @@
 
       $("input[name*='man']").val("!!"); // 네임에 man 이 들어가는 속성에 val 를 넣어준다
     </script>
+
+    <!-- <script>
+      const value1 = $(".test");
+      const value2 = document.querySelector(".test");
+      console.log(value1);
+      console.log(value2);
+
+      // value1이 가지고 있는 Object항목에 css로 color를 red로 변경, 이 항목이 value2에는 없습니다.
+      value1.css("color", "red");
+
+      console.log(value1 == value2);
+    </script> -->
   </body>
 </html>
